--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,7 +25,10 @@
     @apply text-center text-[22px] leading-[30px] tracking-tight text-[#010D3E];
   }
   .card {
-    @apply p-10 shadow-[0_7px_14px_#EAEAEA] border border-[#F1F1F1] rounded-3xl max-w-xs  w-full;
+    @apply p-10 shadow-[0_7px_14px_#EAEAEA] border border-[#F1F1F1] rounded-3xl max-w-xs  w-full  max-h-[300px];
+  }
+  .testimonialCard {
+    @apply p-4 shadow-[0_7px_14px_#EAEAEA] border border-[#F1F1F1] rounded-3xl min-w-[320px] max-w-sm  w-full  max-h-[300px] overflow-hidden;
   }
   .image-effect {
     @apply hover:scale-110 duration-300 ease-in-out rounded-lg object-cover;
