--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -69,7 +69,10 @@
   .font-tinos {
     font-family: "Times New Roman", Times, serif;
   }
-
+  .font-apple {
+    font-family: -apple-system, "Open Sans", "Helvetica Neue", sans-serif;
+    letter-spacing: 0.8px;
+  }
   body {
     zoom: 1 !important;
   }
@@ -83,5 +86,29 @@
       width: 24rem !important;
       /* height: 24rem !important; */
     }
+  }
+  .contactus {
+    position: relative;
+    z-index: 1;
+    text-align: center;
+    background-color: #f6f6f6;
+    padding: 50px 20px;
+  }
+  .contactus::before {
+    content: url("../public/assets/images/mail-1.png");
+    left: 0;
+    position: absolute;
+    top: 0;
+    z-index: -1;
+  }
+  .contactus::after {
+    bottom: -7px;
+    content: url("../public/assets/images/mail-1.png");
+    position: absolute;
+    right: 0;
+    z-index: -1;
+  }
+  .contactField{
+    @apply bg-white p-4 outline-none w-full border border-gray-500
   }
 }
