--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -92,7 +92,8 @@
     z-index: 1;
     text-align: center;
     background-color: #f6f6f6;
-    padding: 55px 20px;
+    width: 100%;
+    margin-top: 50px;
   }
   .contactus::before {
     content: url("../public/assets/images/mail-1.png");
@@ -108,7 +109,7 @@
     right: 0;
     z-index: -1;
   }
-  .contactField{
-    @apply bg-white p-4 outline-none w-full border border-gray-500
+  .contactField {
+    @apply bg-white p-4 outline-none w-full border border-gray-500;
   }
 }
