--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -114,7 +114,7 @@
     position: absolute;
     right: 0;
     z-index: -1;
-    mix-blend-mode:difference
+    /* mix-blend-mode:difference */
   }
   .contactField {
     @apply bg-white p-4 outline-none w-full border border-gray-500;
